Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-98

ack handler not set for messages

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.1, 2.0, 2.1
    • 2.0
    • Stomp
    • None
    • Linux 2.6.17-11-generic, gcc 4.1

    Description

      When I call receive() on a MessageConsumer the message that I get back does not have an ackHandler. If I change the code in ActiveMQConsumer::receive() to call beforeMessageIsConsumed with the clonedMsg that gets returned from receive then the ackHandler is setup.

      Attachments

        Activity

          People

            tabish Timothy A. Bish
            cmaxo Corey Olsen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: