http://issues.apache.org/activemq/browse/AMQCPP-98

Add copy of AckHandler to Stomp Commands Cloning.

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/tags/activemq-cpp-2.0@527909 13f79535-47bb-0310-9956-ffa450edef68